# python-bve_receiver

./: README.md  setup.cfg
bve_receiver/: __init__.py  core.py  replayer.py
bve_receiver/atsplugin/: struct.py
