[metadata]
name = python-bve_receiver
version = attr: bve_receiver.__version__
url = https://github.com/friuli-jokyo/python-bve_receiver
description = BVEのATSプラグイン(PythonTransmitter)から情報を受信するライブラリ
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ふりうり

[options]
python_requires = >=3.10
packages = find:
